# base_django

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
app/: asgi.py  config.py  constants.py  urls.py  wsgi.py
app/contrib/dumper/: middleware.py
app/contrib/health_check/: middleware.py
app/django/: exception.py  pagination.py
app/message/: errors.py  middlewares.py
app/settings/: common.py  docker.py  local.py  local_test.py  production.py  testing.py
apps/api_doc/: __init__.py  apps.py  urls.py
apps/api_doc/docs/: __init__.py
docker/python/: Dockerfile
locale/vi/LC_MESSAGES/: django.mo  django.po
requirements/: base.txt  dev.txt
tests/: test_asgi.py  test_config.py  test_manage.py  test_wsgi.py
tests/django/: test_exception.py
tests/middlewares/: test_dumper.py  test_healthcheck.py
